# Unisonair-optimizer

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  catalogs  masters  pyproject.toml  render.yaml  requirements.txt  uoa_intel.db
.github/workflows/: pages.yml
app/: README.md  __init__.py  engine.py  main.py
app/engine_parts/: __init__.py  effect_summary.py  scene_keys.py  skin_target.py
app/static/: app.js  index.html  styles.css
deploy/: azure_refresh_dataset.sh  build_pages_site.sh  ensure_dataset.sh  local_run.sh  local_run_bg.sh  local_status.sh  local_stop.sh  make_dataset_bundle.sh  start.sh  sync_workbook_to_azure.sh
docs/: README.md  azure_app_service_deploy.md  mcp_session_bootstrap.md  project_split_guide_20260227.md  refactor_backlog_by_size_20260304.md  refactor_stability_playbook_20260304.md  spec_coding_uoa_scoring_app.md  strict_zawa_rules_manual_20260227.md  ui_layout_profile_requirements_20260301.md
docs/site/: index.html
tools/: benchmark_preselect_and_strategy.py  bug_sweep.py  evaluate_fixed_team.py  optimize_vs_base_teams.py  refactor_guard.py  strict_zawa_multicolor_top5_detail.py  strict_zawa_song_top5.py  zawa_score_model.py
tools/baselines/: refactor_guard_baseline.json
