[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uoa-intel"
version = "0.1.0"
description = "Local UNI'S ON AIR asset intelligence tracker for update diffs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "yanq1201" }]
dependencies = [
  "pycryptodome>=3.20.0",
  "UnityPy>=1.20.0",
]

[project.scripts]
uoa-intel = "uoa_intel.cli:main"

[tool.setuptools]
packages = ["uoa_intel"]
